--- a/server/config.json
+++ b/server/config.json
@@ -1,5 +1,5 @@
 {
-    "connectionString": "mongodb://localhost:27017/mean-angular2-registration-login-example",
+    "connectionString": "mongodb://peer_shot:nmg123@ds151612.mlab.com:51612/peer_shot",
     "apiUrl": "http://localhost:4000",
     "secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
 }
