--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
         "url": "https://github.com/cornflourblue/mean-angular2-registration-login-example.git"
     },
     "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
         "bcryptjs": "^2.1.0",
         "body-parser": "^1.13.2",
         "cors": "^2.8.1",
@@ -17,11 +18,11 @@
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.17",
         "mongodb": "^2.2.36",
-        "mongoose": "^5.1.4",
+        "mongoose": "^5.2.14",
         "mongoose-relationship": "^0.1.5",
         "mongoose-validator": "^2.0.2",
         "mongoskin": "^2.1.0",
-        "morgan": "^1.9.0",
+        "morgan": "^1.9.1",
         "multiparty": "^4.1.4",
         "node-sass-chokidar": "^1.3.0",
         "node-session": "^1.2.1",
